<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EncuestaConsumoActivity"
    android:background="@color/black"
    android:padding="50dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/title_5"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textAlignment="center"
        android:gravity="center"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7">

        <RadioButton
            android:id="@+id/radio_option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encuesta1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/radio_option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encuesta2"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/radio_option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encuesta3"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/radio_option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encuesta4"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/radio_option5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encuesta5"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/radio_option6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encuesta6"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/radio_option7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encuesta7"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:textSize="15sp"/>

    </RadioGroup>
    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/guardar"
        android:backgroundTint="@color/blue"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>
</LinearLayout>
