<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Consejos"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="30dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/title_4"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textAlignment="center"
        android:gravity="center"/>
    <TextView
        android:id="@+id/Consejos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:text="@string/consejo1"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textAlignment="center"
        android:gravity="center"/>
    <Button
        android:id="@+id/btn_iniciar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/masConcejos"
        android:backgroundTint="@color/blue"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_detener"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/volver"
        android:backgroundTint="@color/red"
        android:textStyle="bold"
        android:textSize="16sp"/>
</LinearLayout>