<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="50dp"
    android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_plumbing" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/iniciar"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center"/>
        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/correo"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:hint="@string/pass"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_Sesion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/iniciar"
        android:backgroundTint="@color/blue"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_registro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/registrarse"
        android:backgroundTint="@color/red"
        android:textStyle="bold"
        android:textSize="16sp"/>
</LinearLayout>