<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculadorConsumoActivity"
    android:background="@color/black"
    android:padding="50dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/tile_2"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textAlignment="center"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_weight="2"
            android:src="@mipmap/ic_plumbing" />
        <ImageView
            android:id="@+id/water_image1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@mipmap/ic_water"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/water_image2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@mipmap/ic_water"
            android:visibility="gone"/>
    </LinearLayout>
    <TextView
        android:id="@+id/crono"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/crono"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="28sp"
        android:gravity="center"
        android:textAlignment="center"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btn_iniciar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/iniciar"
        android:backgroundTint="@color/blue"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_detener"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/detener"
        android:backgroundTint="@color/red"
        android:textStyle="bold"
        android:textSize="16sp"/>
</LinearLayout>