<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:padding="30dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/title_1"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textAlignment="center"
        android:gravity="center" />

    <!-- Primer cuadro -->
    <LinearLayout
        android:id="@+id/btn_mide"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/rounded_square"
        android:padding="30dp"
        android:layout_marginBottom="20dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_plumbing" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/tile_2"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center" />
    </LinearLayout>

    <!-- Segundo cuadro -->
    <LinearLayout
        android:id="@+id/btn_consumo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/rounded_square"
        android:padding="30dp"
        android:layout_marginBottom="20dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_water" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/title_3"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center" />
    </LinearLayout>

    <!-- Tercer cuadro -->
    <LinearLayout
        android:id="@+id/btn_consejo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/rounded_square"
        android:padding="40dp"
        android:layout_marginBottom="20dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_botler_foreground" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/title_4"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/salir"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAlignment="center" />

</LinearLayout>
